# lannister_bot

./: .default.conf  .env.sample  .flake8  .gitignore  Dockerfile  README.md  default.conf  docker-compose.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: deploy.yml  deploy_apps.yml  destroy.yml  django.yml
api_workers/: apps.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/: Dockerfile  entrypoint.sh  manage.py
backend/api_workers/: serializers.py  urls.py  views.py
backend/lannister_auth/: apps.py  models.py  views.py
backend/lannister_core/: settings.py  urls.py
backend/lannister_requests/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/lannister_roles/: admin.py  models.py  serializers.py
backend/tests/: conftest.py
frontend/: Dockerfile  manage.py  pytest.ini
lannister_auth/: admin.py  models.py  serializers.py  urls.py  views.py
lannister_core/: asgi.py  settings.py  urls.py  wsgi.py
lannister_frontend/: asgi.py
lannister_requests/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
lannister_roles/: apps.py  models.py  permissions.py  urls.py  views.py
lannister_slack/: admin.py  apps.py  models.py  permissions.py  serializers.py  slack_client.py  urls.py  utils.py  views.py
templates/: base.html
terraform/: backend.tf  default.conf.tftpl  docker-compose.yml  docker.sh.tftpl  env.tftpl  install-docker.sh  main.tf  remote.tf  variables.tf
tests/: conftest.py
workers_api/: serializers.py  urls.py
(+49 files in other folders)
